To do:
* Address InnerText vs. InnerXml.  Remove HtmlTag.BodyNoTags.
* Review form variables' use of Element/Tag (Tag should be protected, not internal or public)
* Exceptions need to be organized
* Explanatory message: UserControlTester.FindControl should throw exception explaining control nesting
* Make these HttpClient methods public: SetFormVariable, ClearFormVariable, SubmitForm
* FAQ: No change to "get" without postback
* Look into HtmlAgilityPack


Changes in NUnitAsp 1.5.1:
Produced by Jim Shore and Levi Khatskevitch.
* Added PostBack() overload that takes actual event target and argument.  Credit to Jim Shore.
* Fixed parsing error that occurred when combining <style> tag with HTML comments.  Credit to Jim Shore.
* Added UrlReferrer support to the Browser (HttpClient) object.  Credit to Levi Khatskevitch.
* Upgraded to NUnit 2.2.0.  Credit to Jim Shore.


Changes in NUnitAsp 1.5:
Produced by Jim Shore and Levi Khatskevitch.
* Added an ImageButtonTester.Click overload that takes no arguments.  Credit to Kyle Heon.
* Added CLS compliance (except for certain members).  Credit to Levi Khatskevitch and Michael Ridgway.
* Added HTTP proxy support to the Browser (HttpClient) object.  Credit to Torin Ford.
* Clarified API documentation for all classes.  Credit to Jim Shore.
* Renamed AnchorTester HTML control tester to HtmlAnchorTester.  Credit to Levi Khatskevitch.
* Added postback (server-side click) support to HtmlAnchorTester.  Credit to Rick Spiewak.
* Added simple ASP.NET error page parsing to display meaningful exceptions in tests.  Credit to Levi Khatskevitch.
* Added FAQ: How to test redirection.  Credit to Jim Shore.
* Added FAQ: Support for frames/pop-up windows/Javascript/HTML controls.  Credit to Jim Shore.
* Made more methods public or protected to aid creation of custom testers.  Credit to Jim Shore.
* Created HtmlTag class to simplify creation of control testers.  Credit to Jim Shore.